Added Contact page and Contact Controller. Integrated ReCaptcha for contact form.

--- a/Web/CondominiumCoOwnersSystem.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Shared/_Layout.cshtml
@@ -28,13 +28,13 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">НАЧАЛО</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">ВЪПРОСИ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">КОНТАКТИ</a>
                         </li>
                     </ul>
                 </div>
