--- a/Web/CondominiumCoOwnersSystem.Web/Views/Home/Index.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using CondominiumCoOwnersSystem.Common
 @{
-    this.ViewData["Title"] = "Home Page";
+    this.ViewData["Title"] = "Начална страница";
 }
 
 <div class="text-center">
