--- a/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/AddApartmentToUser.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/AddApartmentToUser.cshtml
@@ -4,20 +4,23 @@
     var cities = Model.Cities.Select(x => new SelectListItem(x.Name, x.Id.ToString()));
 }
 
-<form id="form" method="post">
+<form method="post">
+    <div asp-validation-summary="All"></div>
     <div class="form-group">
-        <label asp-for="CityId">Изберете град:</label>
-        <select id="selectedCity" asp-for="CityId" asp-items="cities" class="form-control" onchange="loadBuildings()">
-            <option>
-                Изберете град...
-            </option>
-        </select>
-        <span asp-validation-for="CityId" class="text-danger"></span>
+        <div class="form-group">
+            <label asp-for="CityId"></label>
+            <select id="selectedCity" asp-for="CityId" asp-items="cities" class="form-control" onchange="loadBuildings()">
+                <option>
+                    Изберете град...
+                </option>
+            </select>
+            <span asp-validation-for="CityId" class="text-danger"></span>
+        </div>
+
+        <div id="building"></div>
+
+        <div id="apartment"></div>
     </div>
-
-    <div id="building"></div>
-
-    <div id="apartment"></div>
 </form>
 
 @section Scripts {
@@ -55,8 +58,5 @@
                 }
             });
         }
-    </script>
-    <script>
-        $('#form').validate();
     </script>
 }
