--- a/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/_PartialApartments.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/_PartialApartments.cshtml
@@ -11,7 +11,7 @@
 }
 else
 {
-    <label asp-for="ApartmentId">Изберете номер на вашият апартамент:</label>
+    <label asp-for="ApartmentId"></label>
     <select id="selectedApartment" asp-for="ApartmentId" asp-items="apartments" class="form-control">
         <option>
             Изберете апартамент...
@@ -21,22 +21,29 @@ else
 
 
     <div class="form-group">
-        <label asp-for="Floor">Етаж:</label>
-        <input asp-for="Floor" class="form-control" required min="0" max="50" />
+        <label asp-for="Floor"></label>
+        <input asp-for="Floor" type="number" class="form-control" />
         <span asp-validation-for="Floor" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Inhabitant">Брой обитатели:</label>
-        <input type="number" asp-for="Inhabitant" class="form-control" required min="0" max="8" />
+        <label asp-for="Inhabitant"></label>
+        <input asp-for="Inhabitant" type="number" class="form-control" />
         <span asp-validation-for="Inhabitant" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-success">Добавете апартамент</button>
+    <button class="btn btn-success" type="submit">Добавете апартамент</button>
 }
 
-@section Scripts {
-    <script>
-        function alert()
-        $('#nullDropDown')
-            .alert("Всички апартаменти в сградата имат посочен собственик. Ако е възникнала грешка моля свържете се с нас");
-    </script>
-}
+<environment names="Development">
+    <script src="~/lib/jquery/dist/jquery.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js" asp-append-version="true"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+</environment>
+<environment names="Staging,Production">
+    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
+    <script src="~/js/site.min.js" asp-append-version="true"></script>
+</environment>
