--- a/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/_PartialApartments.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/_PartialApartments.cshtml
@@ -26,9 +26,9 @@ else
         <span asp-validation-for="Floor" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Inhabitant"></label>
-        <input asp-for="Inhabitant" type="number" class="form-control" />
-        <span asp-validation-for="Inhabitant" class="text-danger"></span>
+        <label asp-for="Inhabitants"></label>
+        <input asp-for="Inhabitants" type="number" class="form-control" />
+        <span asp-validation-for="Inhabitants" class="text-danger"></span>
     </div>
     <button class="btn btn-success" type="submit">Добавете апартамент</button>
 }
