--- a/Web/CondominiumCoOwnersSystem.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Shared/_Layout.cshtml
@@ -53,11 +53,11 @@
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                                    Справки
+                                    Справки за сградата
                                 </a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="Оbligations">Задължения</a>
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="Index">Очет</a>
+                                    <a class="dropdown-item" asp-controller="Reports" asp-action="Оbligations">Отчети</a>
+                                    <a class="dropdown-item" asp-controller="Reports" asp-action="Index">Статус</a>
                                     <a class="dropdown-item" asp-controller="Reports" asp-action="Companies">Справки на фирми</a>
                                 </div>
                             </li>
