Fix index and details page size.

--- a/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/Index.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div nav-link text-lg-left>
-    <a class="btn btn-success" asp-area="" asp-controller="Apartmеnts" asp-action="AddApartmentToUser">Добави</a>
+    <a class="btn btn-success mt-2" asp-area="" asp-controller="Apartmеnts" asp-action="AddApartmentToUser">Добави</a>
 </div>
 
 <hr />
@@ -28,7 +28,7 @@
                     </a>
                 </div>
             </div>
-            <div id="editIfnoField"></div>
+            <div class="container-md" id="editIfnoField"></div>
             <hr />
         }
     }
