--- a/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/Details.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/Details.cshtml
@@ -3,7 +3,7 @@
     this.ViewData["Title"] = "Details";
 }
 
-<div class="container">
+<div class="container-fluid">
     <h2>Апартамент @Model.Number, Ет. @Model.Floor</h2>
     <p>Информация за дължими суми към Етажната Собственост!</p>
     <table class="table table-dark">
