Implement company info slidetoggle, and change fa icon.

--- a/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/Index.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Apartmеnts/Index.cshtml
@@ -28,7 +28,7 @@
                     </a>
                 </div>
             </div>
-            <div class="container-md" id="editIfnoField"></div>
+            <div class="container-fluid" id="editIfnoField"></div>
             <hr />
         }
     }
