--- a/Web/CondominiumCoOwnersSystem.Web/Views/Reports/BuildingInfo.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Reports/BuildingInfo.cshtml
@@ -14,6 +14,7 @@
         </div>
         <div class="card-body">
             <h5 class="card-title">Вие сте наши клиенти от: <time datetime="@Model.CreatedOn.ToString("O")"></time></h5>
+            <h6>(@Model.TimeTillNow месеца)</h6>
             <p class="card-text">Брой апартаменти в сградата е @Model.ApartmentsCount, а разпределението на таксите е @Model.PaymentMethodAsString.ToLower().</p>
             <p class="card-text">Сумата която събирате за Фонд ремонт и обновление е: @Model.FundRepairFee, като се разпределя @Model.FundRepairTypeOfDestribution.ToLower()</p>
             <p class="card-text">Имате сметки за комунални услуги получавате от: @String.Join(", ", Model.BuildingUtilityBills.Select(x => x.UtilityName).ToArray())</p>
@@ -29,10 +30,10 @@
                         <hr />
                         <p>За информация относно фирмата и услугата която извършва натиснете бутона.</p>
                         <div>
-                            <button type="button" class="btn-info infoButon" id="btnShow">Информация</button>
+                            <button type="button" class="btn-info">Информация</button>
                         </div>
                     </div>
-                    <div id="Info" style="display: none">
+                    <div  class="test" style="display: none">
                         <vc:company-info company-id="@buildingService.CompanyId"></vc:company-info>
                     </div>
                 </div>
@@ -43,13 +44,12 @@
 
 @section Scripts {
     <script>
-        let buttons = document.getElementsByClassName("infoButon");
+        let buttons = document.querySelectorAll('.btn-info');
         for (var i = 0; i < buttons.length; i++) {
-            buttons[i].addEventListener("click");
+            var btn = buttons[i];
+            btn.addEventListener('click', () => {
+                $('.test').slideToggle();
+            });
         };
-        event.on('click', showInfo);
-        function showInfo() {
-            $("#Info").slideToggle();
-        }
     </script>
 }
