--- a/Web/CondominiumCoOwnersSystem.Web/Views/Contacts/Index.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Contacts/Index.cshtml
@@ -4,7 +4,7 @@
     this.ViewData["Title"] = "Изпратете ни съобщение";
 }
 
-<form method="post">
+<form method="post" class="mt-4">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Name"></label>
