--- a/Web/CondominiumCoOwnersSystem.Web/Views/Shared/_FooterPartial.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Shared/_FooterPartial.cshtml
@@ -1,5 +1,7 @@
 ﻿@using CondominiumCoOwnersSystem.Common
 
+<!--generate links for About Us and Service. Social media icons not implemented.Implement Map.-->
+
 <div class="footer mt-4">
     <div class="footer1 mt-4">
         <div class="container-fluid">
