--- a/Web/CondominiumCoOwnersSystem.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CondominiumCoOwnersSystem.Web/Views/Shared/_Layout.cshtml
@@ -20,61 +20,13 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow ">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@GlobalConstants.SystemName</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                @if (!this.User.Identity.IsAuthenticated)
-                {
-                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                        <partial name="_LoginPartial" />
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">НАЧАЛО</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Questions">ВЪПРОСИ</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">КОНТАКТИ</a>
-                            </li>
-                        </ul>
-                    </div>
-                }
-                else
-                {
-                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                        <partial name="_LoginPartial" />
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Apartmеnts" asp-action="Index">Апартаменти</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                                    Справки за сградата
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="Оbligations">Отчети</a>
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="Index">Статус</a>
-                                    <a class="dropdown-item" asp-controller="Reports" asp-action="Companies">Справки на фирми</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">Решения</a>
-                            </li>
-                        </ul>
-                    </div>
-                }
-            </div>
-        </nav>
+        <partial name="_NavbarPartial" />
     </header>
 
-    <button  onclick="topFunction()" class="fa fa-chevron-circle-up" id="scrollToTop"></button>
 
-    <div class="container-fluid">
+    <button onclick="topFunction()" class="fa fa-chevron-circle-up" id="scrollToTop"></button>
+
+    <div class="container-fluid mt-xl-5">
         <partial name="_CookieConsentPartial" />
         <main role="main">
             @this.RenderBody()
