--- a/Web/CondominiumCoOwnersSystem.Web/wwwroot/css/site.css
+++ b/Web/CondominiumCoOwnersSystem.Web/wwwroot/css/site.css
@@ -7,6 +7,7 @@ a.navbar-brand {
     word-break: break-all;
 }
 
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -31,6 +32,7 @@ html {
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
+/* Policy style----------------------------*/
 
 button.accept-policy {
     font-size: 1rem;
@@ -45,8 +47,9 @@ html {
 }
 
 body {
-    /* Margin bottom by footer height */
+    /* Margin bottom by footer height and padding for navbar */
     margin-bottom: 60px;
+    padding-top: 30px;
 }
 
 .footer {
